[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/enemy/enemyBullet/enemyBullet.gd" type="Script" id=1]
[ext_resource path="res://assets/jfxr/Laser_shoot 13.wav" type="AudioStream" id=2]
[ext_resource path="res://Material.material" type="Material" id=4]

[sub_resource type="SphereShape" id=1]
radius = 5.07708

[sub_resource type="SphereMesh" id=2]
radius = 6.0
height = 12.0
radial_segments = 8
rings = 8

[sub_resource type="SpatialMaterial" id=3]
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
scale_curve = SubResource( 5 )

[sub_resource type="SphereMesh" id=7]

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
scale = 5.0
scale_curve = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=12]
material = SubResource( 11 )

[node name="enemyBullet" type="Area" groups=[
"enemybullet",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Particles" type="Particles" parent="."]
material_override = ExtResource( 4 )
emitting = false
amount = 32
local_coords = false
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="despawnBullet" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="bulletDespawnPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 30.0

[node name="Particles2" type="Particles" parent="."]
material_override = ExtResource( 4 )
emitting = false
amount = 32
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 12 )
